# phosphoswitch-md

./: .gitignore  README.md  pyproject.toml  requirements.txt
config/: default.yaml
examples/: README.md
scripts/: analyze_trajectory.py  basin_occupancy.py  make_figures.py  postprocess.py
src/phosphoswitch_md/: __init__.py  basin.py  contacts.py  figures.py  io_utils.py  trajectory.py
src/phosphoswitch_md/_cli/: __init__.py  analyze_trajectory.py  basin_occupancy.py  make_figures.py  postprocess.py
tests/: test_basin.py  test_trajectory.py
