[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "phosphoswitch-md"
version = "0.1.0"
description = "MD simulation analysis module for the LMNA Y45 phosphoswitch paper"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [
  { name = "Cris Darbellay", email = "cris.darby1@gmail.com" },
]
keywords = ["molecular dynamics", "phosphoswitch", "LMNA", "MDAnalysis", "GROMACS"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "MDAnalysis>=2.4",
  "numpy>=1.24",
  "pandas>=1.5",
  "matplotlib>=3.7",
  "scipy>=1.10",
  "scikit-learn>=1.2",
  "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "pytest-cov",
]

[project.scripts]
# CLI entry points — all scripts in scripts/ are exposed as commands
postprocess       = "phosphoswitch_md._cli.postprocess:main"
analyze-trajectory = "phosphoswitch_md._cli.analyze_trajectory:main"
basin-occupancy   = "phosphoswitch_md._cli.basin_occupancy:main"
make-figures      = "phosphoswitch_md._cli.make_figures:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[tool.coverage.run]
source = ["src/phosphoswitch_md"]
omit = ["*/tests/*"]
